--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "CedarBlocks",
   "dependencies": {
     "axios": "^0.19.2",
-    "socket.io-client": "^2.3.0"
+    "ms": "^2.1.3",
+    "socket.io-client": "^2.3.0",
+    "string-toolkit": "^1.2.1"
   }
 }
