--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "author": "CedarBlocks",
   "dependencies": {
-    "axios": "^0.19.2",
+   "axios": "^0.19.2",
     "ms": "^2.1.3",
     "socket.io-client": "^2.3.0",
-    "string-toolkit": "^1.2.1"
+    "string-toolkit": "^1.2.1",
+    "node-superfetch": "^0.1.10",
+    "moment": "^2.29.1"
   }
 }
